--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 body {
     margin: 0;
     padding: 0;
-    padding-bottom: 300px;
 }
 
 header {
@@ -43,7 +42,7 @@ nav ul {
 
 nav a {
     display: block;
-    padding: 15px;
+    padding: 8px;
     text-decoration: none;
     text-transform: uppercase;
     color: #727272;
@@ -119,6 +118,12 @@ nav a:hover {
     background-color: #2B4C99;
 }
 
+.banner1 a:hover,
+.banner2 a:hover {
+    color: #000;
+    background-color: #FFF;
+}
+
 .banner_title {
     font-size: 21px;
 }
@@ -148,6 +153,7 @@ nav a:hover {
     margin-bottom: 10px;
     border-bottom: 1px solid #0079C7;
     font-size: 14px;
+    padding-bottom: 10px;
 }
 
 #geral {
@@ -192,5 +198,213 @@ nav a:hover {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
+.widget_body_appointment_text {
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #727272;
+}
+
+.widget_body_appointment_phone {
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 2px solid #727272;
+    border-bottom: 2px solid #727272;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+article {
+    flex: 1;
+    min-width: 300px;
+    margin-right: 20px;
+}
+
+article a {
+    text-decoration: none;
+}
+
+article .news_data {
+    display: flex;
+}
+
+article .news_posted_at {
+    background-color: #2B4C99;
+    color: #FFF;
+    font-size: 12px;
+    padding: 10px;
+    margin-right: 2px;
+}
+
+article .news_comments {
+    background-color: #39AAE1;
+    color: #FFF;
+    font-size: 12px;
+    padding: 10px;
+}
+
+article .news_thumbnail {
+    margin-top: 30px;
+}
+
+article .news_thumbnail img {
+    width: 100%;
+    height: auto;
+}
+
+article .news_title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: #000;
+    font-size: 23px;
+}
+
+article .news_resume {
+    color: #5C5C5C;
+    line-height: 20px;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+footer {
+    background-color: #1E1E1E;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_menu {
+    display: flex;
+}
+
+.fm_1, .fm_2, .fm_3 {
+    flex: 1;
+    color: #FFF;
+    padding: 20px;
+}
+
+.fm_1 {
+    background-color: #39AAE1;
+}
+
+.fm_2 {
+    background-color: #0079C7;
+}
+
+.fm_3 {
+    background-color: #2B4C99;
+}
+
+.footer_area {
+    display: flex;
+}
+
+.footer_areaitem {
+    flex: 1;
+    color: #FFF;
+}
+
+.flexColumn {
+    flex-direction: column;
+}
+
+footer .widget_title_text {
+    color: #FFF;
+}
+
+.footer_copy {
+    border-top: 1px solid #2C2C2C;
+    height: 40px;
+    line-height: 40px;
+    color: #5C5C5C;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+.fm_text1 {
+    font-size: 22px;
+    margin-bottom: 20px;
+}
+
+.fm_text2 {
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+
+footer .widget_body {
+    display: block;
+    font-size: 14px;
+    color: #909090;
+    margin-right: 30px;
+}
+
+.info1,
+.info2,
+.info3 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+footer .info3 a {
+    color: #D5D5D5;
+    text-decoration: none;
+}
+
+footer .text a {
+    text-decoration: none;
+    color: #D5D5D5;
+}
+
+footer .text a:hover {
+    text-decoration: underline;
+}
+
+footer .datedesc {
+    margin-top: 5px;
+    font-size: 11px;
+    color: #42B3E5;
+    margin-bottom: 20px;
+}
+
+footer .twitter_text {
+    font-size: 13px;
+}
+
+footer .twitter_text a {
+    text-decoration: none;
+    color: #D5D5D5;
+}
+
+footer .twitter_text a:hover {
+    text-decoration: underline;
+}
+
+.footer_copy a {
+    text-decoration: none;
+    color: #D5D5D5;
+}
+
+footer .footer_copy a:hover {
+    text-decoration: underline;
+}
+
+footer .fm_text2 a{
+    text-decoration: none;
+    color: #FFF;
+}
+
+footer .fm_text2 a:hover {
+    text-decoration: underline;
+}
+
+.widget_body_appointment_text a {
+    text-decoration: none;
+    color: blue;
+}
