--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,3 +408,96 @@ footer .fm_text2 a:hover {
     text-decoration: none;
     color: blue;
 }
+
+.menuMobile {
+    display: none;
+    width: 40px;
+    height: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+}
+
+.mm_line {
+    height: 3px;
+    background-color: #39AAE1;
+}
+
+@media (max-width: 600px) {
+    .banner_headline {
+        padding: 20px;
+        padding-bottom: 80px;
+    }
+
+    .banner_headline h1 {
+        font-size: 55px;
+    }
+
+    .banner_headline h2 {
+        font-size: 17px;
+    }
+
+    .banner_options {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    #geral section,
+    #geral aside,
+    .footer_area,
+    .footer_copy {
+        padding: 20px;
+    }
+
+    section div .widget {
+        margin-top: 150px;
+    }
+    
+    .footer_menu {
+        flex-direction: column;
+    }
+
+    .footer_area {
+        flex-direction: column;
+    }
+
+    header .container {
+        flex-direction: row;
+    }
+
+    nav ul {
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: #FFF;
+    }
+
+    header {
+        height: auto;
+    }
+
+    .logo {
+        padding-left: 20px;
+    }
+
+    .menuMobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    section div .widget {
+        margin-top: 0px;
+        margin-bottom: 90px;
+    }
+
+    #geral section {
+        margin-top: 120px;
+    }
+}
